# doc_helper

./: .gitignore  ADR_INDEX.md  AGENT_RULES.md  APPTYPE_AUTHOR_GUIDE.md  CLAUDE.md  CONTINUOUS_TECHNICAL_ROADMAP.md  IMPLEMENTATION_RULES.md  PHASE_2_STEP_2_ARCHITECTURE_FIX_SUMMARY.md  PHASE_2_STEP_3_DESIGN.md  PHASE_2_STEP_3_STATUS.md  PHASE_F-13_COMPLETION_REPORT.md  PHASE_F-13_SUMMARY.md  PHASE_R-1_COMPLETION_REPORT.md  PHASE_R-2_COMPLETION_REPORT.md  PHASE_R-3_COMPLETION_REPORT.md  SCHEMA_DESIGNER_STATUS.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_AUDIT.md  U10_COMPLIANCE_CHECKLIST.md  U11_COMPLIANCE_CHECKLIST.md  U12_COMPLIANCE_CHECKLIST.md  U1_COMPLIANCE_CHECKLIST.md  U2_COMPLIANCE_CHECKLIST.md  U4_COMPLIANCE_CHECKLIST.md  U5_COMPLIANCE_CHECKLIST.md  U7_COMPLIANCE_CHECKLIST.md  U7_NAVIGATION_COMPLETION.md  U8_COMPLIANCE_CHECKLIST.md  U9_COMPLIANCE_CHECKLIST.md  V1_COMPLETION_REPORT_ORIGINAL.md  V1_VERIFIED_STATUS_REPORT.md  V2_PLATFORM_ENFORCEMENT_GAPS_ANALYSIS.md  current_project.db  plan.md  plan_phase5_complete.md  pyproject.toml  pytest.ini  requirements.txt  unified_upgrade_plan.md  unified_upgrade_plan_FINAL.md
.claude/: settings.local.json
adrs/: ADR-001-controlled-big-bang-rewrite.md  ADR-002-clean-architecture-ddd.md  ADR-003-framework-independent-domain.md  ADR-004-cqrs-pattern.md  ADR-005-mvvm-pattern.md  ADR-006-event-bus.md  ADR-007-repository-pattern.md  ADR-008-result-monad.md  ADR-009-strongly-typed-ids.md  ADR-010-immutable-value-objects.md  ADR-011-unit-of-work.md  ADR-012-registry-based-factory.md  ADR-013-multi-app-type-platform-vision.md  ADR-017-command-based-undo.md  ADR-020-dto-only-mvvm.md  ADR-021-undo-state-dto-isolation.md  ADR-022-relationship-definitions-DRAFT.md  ADR-022-relationship-definitions.md  ADR-024-architectural-compliance-scanning.md  ADR-025-validation-severity-levels.md  ADR-026-search-architecture.md  ADR-027-field-history-storage.md  ADR-031-undo-history-persistence.md  ADR-039-import-export-data-format.md  ADR-040-formula-semantics-validation-execution.md  ADR-041-formula-dependency-cycle-detection.md  ADR-050-phase-r1-runtime-rules.md  ADR-V2-001-platform-apptype-boundary.md  ADR-V2-002-apptype-configuration-project-identity.md  ADR-V2-003-multi-app-module-layout.md  ADR-V2-SCHEMA-DESIGNER.md
archive/compliance/: U11_COMPLIANCE_CHECKLIST.md  U12_COMPLETION_SUMMARY.md  U12_COMPLIANCE_CHECKLIST.md  U3_COMPLIANCE_CHECKLIST.md  U6_UNDO_SYSTEM_COMPLETE.md
archive/plans/: near_term_implementation.md  plan_01.md  plan_02.md  plan_phase6_complete.md  plan_phase7_complete.md
docs/: ARCHITECTURE_VERIFICATION.md  DEVELOPER_GUIDE.md  phase_r4_summary.md
docs/guides/: APPTYPE_AUTHOR_GUIDE.md  USER_GUIDE.md
docs/platform/: V2_PLATFORM_IMPLEMENTATION_PLAN.md  V2_PLATFORM_STABILIZATION_REPORT.md
docs/schema-designer/: COMPLETION_PLAN.md  COMPLETION_PLAN_DRAFT.md  EXECUTION_READINESS_2026-01-23.md  GAP_ANALYSIS_2026-01-23.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PHASE_1_EXECUTION_CHECKLIST.md  PHASE_1_GUARDRAILS.md  PHASE_2_EXECUTION_CHECKLIST.md  PHASE_2_STEP_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_STEP_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_STEP_4_GUARDRAILS_DRAFT.md  PHASE_3_GUARDRAILS_DRAFT.md  PHASE_4_GUARDRAILS_DRAFT.md  PHASE_5_UX_PLAN_DRAFT.md  RELATIONSHIP_EDITOR_UI_PLAN_DRAFT.md  SYNC_REPORT_2026-01-22.md  schema_db_init.sql  schema_db_init_fixed.sql
docs/specifications/: interchange_format_v1.md
docs/v2_strategic_analysis/: 01_ARCHITECTURAL_PRESSURE_POINTS.md  02_UNFREEZE_TRIGGERS.md  03_CANDIDATE_ADR_STUBS.md  04_V2_VISION_DOCUMENT.md  README.md
examples/: schema_designer_demo.py
plans/: README.md
scripts/: check_architecture.py  check_dto_compliance.py  create_test_report_schema.py  create_test_report_template.py
src/doc_helper/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/architecture/: __init__.py  test_repository_no_nested_calls.py  test_schema_repository_guardrail.py
tests/e2e/: __init__.py  test_create_edit_save_generate_workflow.py  test_i18n_workflow.py  test_legacy_parity_verification.py  test_undo_redo_workflow.py  test_validation_workflow.py
tests/unit/: __init__.py  (+1 more)
translations/: ar.json  en.json
(+508 files in other folders)
